// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchAddress /> should render correctly 1`] = `
<SearchAddressstyle__Container>
  <SearchAddressstyle__SearchContainer>
    <Icon
      className="icon-search"
      color="#707070"
      name="search"
      size={15}
    />
    <input
      onChange={[Function]}
      placeholder="map.search.placeholder.text"
      type="text"
      value=""
    />
    <SearchAddressstyle__ButtonLocation
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <Icon
        color="#707070"
        name="locationTarget"
        size={16}
      />
    </SearchAddressstyle__ButtonLocation>
  </SearchAddressstyle__SearchContainer>
</SearchAddressstyle__Container>
`;

exports[`<SearchAddress /> should render correctly with address prefilled 1`] = `
<SearchAddressstyle__Container>
  <SearchAddressstyle__SearchContainer>
    <Icon
      className="icon-search"
      color="#707070"
      name="search"
      size={15}
    />
    <input
      onChange={[Function]}
      placeholder="map.search.placeholder.text"
      type="text"
      value="8 Passage de Londres, 67000 Strasbourg"
    />
    <SearchAddressstyle__ButtonLocation
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <Icon
        color="#707070"
        name="locationTarget"
        size={16}
      />
    </SearchAddressstyle__ButtonLocation>
  </SearchAddressstyle__SearchContainer>
</SearchAddressstyle__Container>
`;
